--- a/web/index.html
+++ b/web/index.html
@@ -59,9 +59,9 @@
 
 
     // Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
+    // const app = firebase.initializeApp(firebaseConfig);
     //const analytics = firebase.getAnalytics(app);
-    const analytics = firebase.analytics();;
+    // const analytics = firebase.analytics();;
   </script>
 
   <script>
