--- a/web/index.html
+++ b/web/index.html
@@ -16,12 +16,12 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter application.">
+  <meta name="description" content="Artistic photography by Charlotte Lobry.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_app">
+  <meta name="apple-mobile-web-app-title" content="Charlotte Lobry Photography">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <title>flutter_app</title>
